<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_team1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_match_team1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinner_team1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_team2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_match_team2"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinner_team2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_match_Match_Name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/matchName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </EditText>
        </TableRow>

        <TextView
            android:id="@+id/tv_toss_won"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_match_toss_won_by"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rb_toss_won_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:text="@string/new_match_toss_won_by_team1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioButton
                android:id="@+id/rb_toss_won_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:text="@string/new_match_toss_won_by_team2"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_elected_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_match_elected_to"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rb_elected_to_bat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:text="@string/new_match_elected_to_bat"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioButton
                android:id="@+id/rb_elected_to_bowl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:text="@string/new_match_elected_to_bowl"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_match_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_match_type"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner_match_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_no_of_overs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_match_no_of_overs"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:max="50"
                android:progress="10" />
        </TableRow>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:onClick="createMatchClick"
            android:text="@string/new_match_create_match"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</ScrollView>