<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_team1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_team_team_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/teamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium" >

            <requestFocus />
        </EditText>

        <CheckBox
            android:id="@+id/chk_create_sample_team_members"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_team_create_sample_team_members"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="createTeamClick"
            android:text="@string/add_team_create_team"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</ScrollView>