<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_team_member_new_member"
            android:labelFor="@+id/playerName" 
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/playerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_team_member_new_member"
            android:inputType="text" 
            android:textAppearance="?android:attr/textAppearanceMedium">
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_team_member_batting_skill" >
        </TextView>

        <SeekBar
            android:id="@+id/battingSkill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:max="10"
            android:progress="5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_team_member_bowling_skill" 
            android:textAppearance="?android:attr/textAppearanceMedium">
        </TextView>

        <SeekBar
            android:id="@+id/BowlingSkill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:max="10"
            android:progress="5" />

        <Button
            android:id="@+id/btn_create_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="updateTeamMemberClick"
            android:text="@string/add_team_member_update_team_member" 
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>

</ScrollView>