<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/batting_team1_label"
            style="@style/lightBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_match_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner_all_matches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0" >

            <Button
                android:id="@+id/btn_view_match"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="viewMatchDetails"
                android:text="@string/view_match_submit" 
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Button
                android:id="@+id/btn_delete_match"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="delete_match_click"
                android:text="@string/view_match_delete" 
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0" >

            <TextView
                android:id="@+id/view_match_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

</ScrollView>